packages/boxel-ui/addon/src/styles/variables.css
:root {
  --boxel-font-family: 'Poppins', 'Open Sans', helvetica, arial, sans-serif;
  --boxel-monospace-font-family: 'Roboto Mono', 'Courier New', courier,
    monospace;
  --boxel-font-xl: var(--boxel-font-size-xl) / calc(43 / 32)
    var(--boxel-font-family);
  --boxel-font-lg: var(--boxel-font-size-lg) / calc(30 / 22)
    var(--boxel-font-family);
  --boxel-font-med: var(--boxel-font-size-med) / calc(28 / 20)
    var(--boxel-font-family); /* default */
  --boxel-font: var(--boxel-font-size) / calc(22 / 16) var(--boxel-font-family); /* default */
  --boxel-font-sm: var(--boxel-font-size-sm) / calc(18 / 13)
    var(--boxel-font-family);
  --boxel-font-xs: var(--boxel-font-size-xs) / calc(15 / 11)
    var(--boxel-font-family);

  /* font-sizes */
  --boxel-font-size-xxl: 2.5rem; /* 40px */
  --boxel-font-size-xl: 2rem; /* 32px */
  --boxel-font-size-lg: 1.375rem; /* 22px */
  --boxel-font-size-med: 1.25rem; /* 20px */
  --boxel-font-size: 1rem; /* default - 16px */
  --boxel-font-size-sm: 0.8125rem; /* 13px */
  --boxel-font-size-xs: 0.6875rem; /* 11px */

  /* letter-spacing */
  /* Note: the px conversion is using default font_size = 16px */
  /* Formula: px = em * font_size */
  --boxel-lsp-xxl: 0.1em; /* 1.6px */
  --boxel-lsp-xl: 0.05em; /* 0.8px */
  --boxel-lsp-lg: 0.035em; /* 0.56px */
  --boxel-lsp: 0.025em; /* 0.4px */
  --boxel-lsp-sm: 0.015em; /* 0.24px */
  --boxel-lsp-xs: 0.01em; /* 0.16px */
  --boxel-lsp-xxs: 0.005em; /* 0.08px */

  /* Modular scale for spacing */
  --boxel-spacing: 1rem; /* base size (16px) */
  --boxel-ratio: 1.333; /* scale (based on "Perfect Fourth" scale) */
  --boxel-sp-6xs: calc(var(--boxel-sp-5xs) / var(--boxel-ratio)); /* 2.17px */
  --boxel-sp-5xs: calc(var(--boxel-sp-4xs) / var(--boxel-ratio)); /* 2.88px */
  --boxel-sp-4xs: calc(var(--boxel-sp-xxxs) / var(--boxel-ratio)); /* 3.827px */
  --boxel-sp-xxxs: calc(var(--boxel-sp-xxs) / var(--boxel-ratio)); /* 5.09px */
  --boxel-sp-xxs: calc(var(--boxel-sp-xs) / var(--boxel-ratio)); /* 6.78px */
  --boxel-sp-xs: calc(var(--boxel-sp-sm) / var(--boxel-ratio)); /* 9.05px */
  --boxel-sp-sm: calc(var(--boxel-sp) / var(--boxel-ratio)); /* 12px */
  --boxel-sp: var(--boxel-spacing); /* 16px */
  --boxel-sp-lg: calc(var(--boxel-sp) * var(--boxel-ratio)); /* 21.28px */
  --boxel-sp-xl: calc(var(--boxel-sp-lg) * var(--boxel-ratio)); /* 37.44px */
  --boxel-sp-xxl: calc(var(--boxel-sp-xl) * var(--boxel-ratio)); /* 50.1px */
  --boxel-sp-xxxl: calc(var(--boxel-sp-xxl) * var(--boxel-ratio)); /* 66.6px */

  /* common icon sizes */
  --boxel-icon-xxs: 0.75rem; /* 12px */
  --boxel-icon-xs: 1rem; /* 16px */
  --boxel-icon-sm: 1.25rem; /* 20px */
  --boxel-icon-med: 1.875rem; /* 30px */
  --boxel-icon-lg: 2.5rem; /* 40px */
  --boxel-icon-xl: 3.75rem; /* 60px */
  --boxel-icon-xxl: 5rem; /* 80px */

  /* other */
  --boxel-button-border-color: #acacac;
  --boxel-border-color: #d3d3d3;
  --boxel-border: 1px solid var(--boxel-border-color);
  --boxel-border-dark: 1px solid var(--boxel-dark);
  --boxel-border-flexible: 1px solid rgba(255, 255, 255, 0.35);
  --boxel-border-card: 1px solid rgba(0, 0, 0, 0.1);
  --boxel-border-radius-xxs: 1.5px;
  --boxel-border-radius-xs: 4px;
  --boxel-border-radius-sm: 6px;
  --boxel-border-radius: 7.5px;
  --boxel-border-radius-lg: 11.25px;
  --boxel-border-radius-xl: 15px;
  --boxel-border-radius-xxl: 22px;
  --boxel-transition: 0.2s ease;
  --boxel-box-shadow: 0 1px 3px rgb(0 0 0 / 25%);
  --boxel-box-shadow-hover: 0 3px 10px rgb(0 0 0 / 15%);
  --boxel-outline-color: var(--boxel-blue);
  --boxel-outline: 2px solid var(--boxel-outline-color);
  --boxel-deep-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.35);

  /* Container sizes */
  --boxel-xxs-container: 15.625rem; /* 250px */
  --boxel-xs-container: 17.8125rem; /* 285px */
  --boxel-sm-container: 36.25rem; /* 580px */
  --boxel-md-container: 40.625rem; /* 650px */
  --boxel-lg-container: 43.75rem; /* 700px */
  --boxel-xl-container: 65rem; /* 1040px */
  --boxel-xxl-container: 83.76rem; /* 1340px */

  /* COLOR PALETTE */

  /**** Revisited Colors BOXEL-UI ****/
  --boxel-100: #f8f7fa;
  --boxel-200: #e8e8e8;
  --boxel-300: #d1d1d1;
  --boxel-400: #afafb7;
  --boxel-450: #919191;
  --boxel-500: #5a586a;
  --boxel-600: #413e4e;
  --boxel-700: #272330;

  --boxel-cyan: #00ebe5;
  --boxel-teal: #00ffba;
  --boxel-dark-teal: #00ebac;
  --boxel-red: #ff5050;
  --boxel-pink: #ff009d;
  --boxel-orange: #ff7f00;
  --boxel-yellow: #ffd800;
  --boxel-lime: #c3fc33;
  --boxel-green: #37eb77;
  --boxel-dark-green: #00ac3d;
  --boxel-lilac: #a66dfa;
  --boxel-fuschia: #ac00ff;
  --boxel-purple: #6638ff;
  --boxel-blue: #0069f9;
  --boxel-navy: #281e78;

  --boxel-label-color: var(--boxel-dark);
  /**** End of revisited colors ****/

  /* Primary colors */
  --boxel-light: #fff;
  --boxel-dark: #000;
  --boxel-dark-hover: rgba(0, 0, 0, 0.1);
  --boxel-darker-hover: rgba(0, 0, 0, 0.5);

  --boxel-highlight: var(--boxel-teal);
  --boxel-highlight-hover: var(--boxel-dark-teal);
  --boxel-danger: var(
    --boxel-red
  ); /* formerly boxel-error-100: the latest design docs (8/16/2023) use this color for danger instead */
  --boxel-danger-hover: #fa1521;

  /* Boxel purples */
  --boxel-purple-100: var(--boxel-100);
  --boxel-purple-200: var(--boxel-400); /* formerly: #b3b1b8; */
  --boxel-purple-300: var(--boxel-400);
  --boxel-purple-400: var(--boxel-500); /* formerly: #6b6a80; */
  --boxel-purple-500: var(--boxel-500);
  --boxel-purple-600: var(--boxel-600); /* Cardspace bg */
  --boxel-purple-700: var(--boxel-700); /* formerly: #393642; */
  --boxel-purple-750: var(--boxel-700); /* formerly: #363441; */
  --boxel-purple-800: var(--boxel-700); /* formerly: #2e2d38; */
  --boxel-purple-900: var(--boxel-700); /* Card Wallet bg */

  /* Boxel neutrals */
  --boxel-light-100: #f4f4f4;
  --boxel-light-200: var(--boxel-200); /* formerly: #f0f0f0; */
  --boxel-light-300: var(--boxel-200); /* formerly: #efefef; */
  --boxel-light-400: var(--boxel-200);
  --boxel-light-500: var(--boxel-300); /* formerly: #dedede; */
  --boxel-light-600: var(--boxel-300);

  /* Status colors */
  --boxel-error-100: #dc0202; /* alert - attention - error */
  --boxel-error-200: #ed0000;
  --boxel-warning-100: var(--boxel-yellow); /* warning - notification */
  --boxel-success-100: var(--boxel-green);
  --boxel-success-200: var(--boxel-teal);
  --boxel-success-300: var(--boxel-dark-green);

  /* z-index layers */
  --boxel-layer-floating-button: 1000;
  --boxel-layer-modal-default: 1500;
  --boxel-layer-modal-urgent: 2000;

  /* Form control appearance */
  --boxel-form-control-height: 2.5rem; /* 40px */
  --boxel-form-control-placeholder-color: var(--boxel-400);
  --boxel-form-control-border-color: var(--boxel-border-color);
  --boxel-form-control-border-radius: var(--boxel-border-radius);
}

